--- a/force-app/main/default/classes/TweetExtension.cls
+++ b/force-app/main/default/classes/TweetExtension.cls
@@ -1,11 +1,31 @@
 public class TweetExtension {
 
     private ApexPages.StandardController stdController;
-    
+    public List<Tweet__c> childrenTweets = new List<Tweet__c>();
     public TweetExtension (ApexPages.StandardController ct) {
         this.stdController = ct;
-
+        childrenTweets = [SELECT Id FROM Tweet__c WHERE commented_id__c = :ct.getRecord().Id];
     }
+
+    // public List<Tweet__c> getchildrenTweets() {
+    //     List<Tweet__c> results = Database.query(
+    //         'SELECT Id' +
+    //         'FROM Tweet__c ' +
+    //         'WHERE commented_id__c = ' + this.stdController.getRecord().Id
+    //     );
+    //     return results;
+    // }
+
+
+
+
+    // public String getUserName(){
+    //     String result = Database.query(
+    //         'SELECT Name' +
+    //         'FROM Tweet__c'
+    //     );
+    //     return result;
+    // }
 
     public void save(){
         System.debug(this.stdController.getRecord());
