--- a/force-app/main/default/classes/TweetExtension.cls
+++ b/force-app/main/default/classes/TweetExtension.cls
@@ -79,6 +79,28 @@ public class TweetExtension {
         return tempPages;
     }
 
+    public PageReference follow(){
+        String user_id = this.stdController.getRecord().Id;
+        Id owner_id = UserInfo.getUserId();
+
+        List<Follows__c> result = 
+            [SELECT id FROM Follows__c WHERE follower_id__c = :user_id AND CreatedById = :owner_id];
+
+        if(result.isEmpty()){
+            Follows__c follow = new Follows__c(
+                follower_id__c = user_id
+            );
+            insert follow;
+        }else{
+            Follows__c[] follow_dlt = [SELECT id FROM Follows__c WHERE follower_id__c = :user_id AND CreatedById = :owner_id];
+            delete follow_dlt;
+        }
+
+        PageReference tempPages = new PageReference('/apex/SNS_User?id='+user_id);
+        tempPages.setRedirect(true);
+        return tempPages;
+    }
+
 
     // // いいね数を実際にプラスする関数
     // public void good_cal(){ 
