フォロー機能の追加

--- a/force-app/main/default/classes/TweetExtension.cls
+++ b/force-app/main/default/classes/TweetExtension.cls
@@ -79,27 +79,28 @@ public class TweetExtension {
         return tempPages;
     }
 
-    public PageReference follow(){
-        String user_id = this.stdController.getRecord().Id;
-        Id owner_id = UserInfo.getUserId();
+    // フォロー機能をTweetExtensionからFollowExtensionに移したためコメントアウト
+    // public PageReference follow(){
+    //     String user_id = this.stdController.getRecord().Id;
+    //     Id owner_id = UserInfo.getUserId();
 
-        List<Follows__c> result = 
-            [SELECT id FROM Follows__c WHERE follower_id__c = :user_id AND CreatedById = :owner_id];
+    //     List<Follows__c> result = 
+    //         [SELECT id FROM Follows__c WHERE follower_id__c = :user_id AND CreatedById = :owner_id];
 
-        if(result.isEmpty()){
-            Follows__c follow = new Follows__c(
-                follower_id__c = user_id
-            );
-            insert follow;
-        }else{
-            Follows__c[] follow_dlt = [SELECT id FROM Follows__c WHERE follower_id__c = :user_id AND CreatedById = :owner_id];
-            delete follow_dlt;
-        }
+    //     if(result.isEmpty()){
+    //         Follows__c follow = new Follows__c(
+    //             follower_id__c = user_id
+    //         );
+    //         insert follow;
+    //     }else{
+    //         Follows__c[] follow_dlt = [SELECT id FROM Follows__c WHERE follower_id__c = :user_id AND CreatedById = :owner_id];
+    //         delete follow_dlt;
+    //     }
 
-        PageReference tempPages = new PageReference('/apex/SNS_User?id='+user_id);
-        tempPages.setRedirect(true);
-        return tempPages;
-    }
+    //     PageReference tempPages = new PageReference('/apex/SNS_User?id='+user_id);
+    //     tempPages.setRedirect(true);
+    //     return tempPages;
+    // }
 
 
     // // いいね数を実際にプラスする関数
@@ -109,7 +110,6 @@ public class TweetExtension {
     //     acct.like_num__c = good_num;
     // }
 
-    
     public List<String> accessibleFields {
         get {
             if (accessibleFields == null) {
