フォローとフォロワーの表示

--- a/force-app/main/default/classes/FollowExtension.cls
+++ b/force-app/main/default/classes/FollowExtension.cls
@@ -1,9 +1,40 @@
 public class FollowExtension {
 
     private ApexPages.StandardController stdController;
+    public Boolean follow_bool {get; set;}
+    public Boolean owner_bool {get; set;}
+    public Decimal follow_num {get; set;}
+    public Decimal follower_num {get; set;}
+    
 
     public FollowExtension(ApexPages.StandardController ct) {
         this.stdController = ct;
+
+        String user_id = this.stdController.getRecord().Id;
+        Id owner_id = UserInfo.getUserId();
+        List<Follows__c> result = 
+            [SELECT id FROM Follows__c WHERE follower_id__c = :user_id AND CreatedById = :owner_id];
+            
+        if(result.isEmpty()){
+            follow_bool = true;
+        }else{
+            follow_bool = false;
+        }
+
+        if(user_id == owner_id){
+            owner_bool = false;
+        }else{
+            owner_bool = true;
+        }
+
+        List<Follows__c> follow_list =
+            [SELECT id , follower_id__c FROM Follows__c WHERE CreatedById = :this.stdController.getRecord().Id];
+        
+        List<Follows__c> follower_list =
+            [SELECT id , CreatedById FROM Follows__c WHERE follower_id__c = :this.stdController.getRecord().Id];
+
+        follow_num = follow_list.size();
+        follower_num = follower_list.size();
     }
 
     public PageReference follow(){
@@ -18,9 +49,11 @@ public class FollowExtension {
                 follower_id__c = user_id
             );
             insert follow;
+            follow_bool = false;
         }else{
             Follows__c[] follow_dlt = [SELECT id FROM Follows__c WHERE follower_id__c = :user_id AND CreatedById = :owner_id];
             delete follow_dlt;
+            follow_bool = true;
         }
 
         PageReference tempPages = new PageReference('/apex/SNS_User?id='+user_id);
@@ -38,4 +71,18 @@ public class FollowExtension {
         return results;
     }
 
+    public List<Follows__c> GetFollowUser(){
+        List<Follows__c> follow_list = 
+            [SELECT id , follower_id__c,name FROM Follows__c WHERE CreatedById = :this.stdController.getRecord().Id];
+        System.debug(follow_list);
+            return follow_list;
+    }
+
+    public List<Follows__c> GetFollowerUser(){
+        List<Follows__c> follower_list = 
+        [SELECT id , CreatedById FROM Follows__c WHERE follower_id__c = :this.stdController.getRecord().Id];
+        return follower_list;
+    }
+    
 }
+
