--- a/force-app/main/default/classes/TweetExtension.cls
+++ b/force-app/main/default/classes/TweetExtension.cls
@@ -27,12 +27,34 @@ public class TweetExtension {
     // 自分のツイートを取得（SNS_Userで利用）
     public List<Tweet__c> getMyTweets() {
         List<Tweet__c> results = Database.query(
-            'SELECT title__c, body__c, CreatedById, CreatedDate ' +
+            'SELECT title__c, body__c, CreatedById, CreatedDate, like_count__c ' +
             'FROM Tweet__c ' +
             'WHERE CreatedById = \'' + this.stdController.getRecord().Id +'\''
         );
         return results;
     }
+
+    //フォローしているユーザーのツイートを取得（SNS_Homeで利用）
+    // public List<Tweet__c> getFollowTweets(){
+    //     List<Follows__c> follow_ids_list =
+    //         [SELECT follower_id__c FROM Follows__c WHERE CreatedById = :UserInfo.getUserId()];
+
+        // Set<String> follow_ids_set = new Set<String>(follow_ids_list);
+        // List<Tweet__c> follow_tweets =
+        //     [SELECT title__c FROM Tweet__c WHERE CreatedById IN :follow_ids_list];
+            
+
+        // Set<Follows__c> follow_ids = new Set<Follows__c>(follow_ids_list);
+
+        //ここのエラーから直す　全然できない
+
+        // Map <Id, follower_id__c> follow_ids_map = new Map<Id, Follows__c>([SELECT follower_id__c FROM Follows__c WHERE CreatedById = :UserInfo.getUserId()]);
+        
+        // List<Tweet__c> follow_tweets =
+        //     [SELECT title__c, body__c, CreatedById, CreatedDate, like_count__c FROM Tweet__c WHERE CreatedById IN :follow_ids_map.keySet()];
+        
+    //         return follow_tweets;
+    // }
 
 
     // ツイートの新規作成＆更新（SNS_Postで利用）
@@ -69,11 +91,22 @@ public class TweetExtension {
     // いいねボタンと連動してGoodレコードを作り、triggerに反応する場所
     public PageReference good(){
         String tweet_id = this.stdController.getRecord().Id;
+        Id owner_id = UserInfo.getUserId();
 
-        Good__c good = new Good__c(
-            good_tweet_id__c = tweet_id
-        );
-        insert good;
+        List<Good__c> result =
+            [SELECT id FROM Good__c WHERE CreatedById = :owner_id AND good_tweet_id__c = :tweet_id];
+
+        if(result.isEmpty()){
+            Good__c good = new Good__c(
+                good_tweet_id__c = tweet_id
+            );
+            insert good;
+        }else{
+            Good__c[] good_dlt = [SELECT id FROM Good__c WHERE CreatedById = :owner_id AND good_tweet_id__c = :tweet_id];
+            delete good_dlt;
+        }
+
+        
         PageReference tempPages = new PageReference('/apex/SNS_Tweet?id='+tweet_id);
         tempPages.setRedirect(true);
         return tempPages;
