--- a/force-app/main/default/classes/TweetExtension.cls
+++ b/force-app/main/default/classes/TweetExtension.cls
@@ -97,32 +97,32 @@ public class TweetExtension {
 
     
     //
-    public List<String> accessibleFields {
-        get {
-            if (accessibleFields == null) {
-                // Get a list (map) of all fields on the object
-                Map<String, Schema.SobjectField> fields = 
-                    Schema.SobjectType.Tweet__c.fields.getMap();
+    // public List<String> accessibleFields {
+    //     get {
+    //         if (accessibleFields == null) {
+    //             // Get a list (map) of all fields on the object
+    //             Map<String, Schema.SobjectField> fields = 
+    //                 Schema.SobjectType.Tweet__c.fields.getMap();
         
-                // Save only the fields accessible by the current user 
-                Set<String> availableFieldsSet = new Set<String>();
-                for (String s : fields.keySet()) {
-                    if (fields.get(s).getDescribe().isAccessible() 
-                        // Comment out next line to show standard/system fields
-                        && fields.get(s).getDescribe().isCustom()
-                    ){
-                            availableFieldsSet.add(s.toLowerCase());
-                            if(Test.isRunningTest()) System.debug('Field: ' + s);
-                    }
-                }
+    //             // Save only the fields accessible by the current user 
+    //             Set<String> availableFieldsSet = new Set<String>();
+    //             for (String s : fields.keySet()) {
+    //                 if (fields.get(s).getDescribe().isAccessible() 
+    //                     // Comment out next line to show standard/system fields
+    //                     && fields.get(s).getDescribe().isCustom()
+    //                 ){
+    //                         availableFieldsSet.add(s.toLowerCase());
+    //                         if(Test.isRunningTest()) System.debug('Field: ' + s);
+    //                 }
+    //             }
                 
-                // Convert set to list, save to property
-                accessibleFields = new List<String>(availableFieldsSet);
-            }
-            return accessibleFields;
-        }
-        private set;
-    }
+    //             // Convert set to list, save to property
+    //             accessibleFields = new List<String>(availableFieldsSet);
+    //         }
+    //         return accessibleFields;
+    //     }
+    //     private set;
+    // }
 
 
 
